CRUD dinámico de Productos en el panel de administración

--- a/templates/admin/components/header.html.twig
+++ b/templates/admin/components/header.html.twig
@@ -16,6 +16,10 @@
                         <a class="nav-link {{ 'users' in url ? 'active':'' }}" href="{{ path('admin_user_index') }}">Usuarios</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {{ 'product' in url ? 'active':'' }}"
+                           href="{{ path('admin_product_index') }}">Productos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {{ 'contact' in url ? 'active':'' }}"
                            href="{{ path('admin_contact_index') }}">Contactos</a>
                     </li>
