--- a/templates/platform/amazon/home.html.twig
+++ b/templates/platform/amazon/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Módulos{% endblock %}
+{% block title %}Home Amazon{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
