--- a/templates/admin/components/footer.html.twig
+++ b/templates/admin/components/footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="footer justify-content-center">
     <div class="col-12 p-2 p-md-0 text-center">
         © {{ "now"|date("Y") }}
-        <a href="#" style="pointer-events:none;" class="ms-1">Ramón Martínez</a>
+        <a href="https://www.linkedin.com/in/ram%C3%B3n-mart%C3%ADnez-3223181b0/" target="_blank" class="ms-1">Ramón Martínez</a>
     </div>
 </footer>
