--- a/templates/admin/product/_new.html.twig
+++ b/templates/admin/product/_new.html.twig
@@ -327,7 +327,7 @@
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" name="rankings[__INDEX__][isRoot]"
                            value="1" id="ranking_is_root___INDEX__">
-                    <label class="form-check-label" for="ranking_is_root___INDEX__">Es Categoría Raíz</label>
+                    <label class="form-check-label" for="ranking_is_root___INDEX__">Es Categoría Principal</label>
                 </div>
             </div>
         </div>
