--- a/public/assets/css/general/general-styles.css
+++ b/public/assets/css/general/general-styles.css
@@ -4,30 +4,38 @@
     --tertiary: rgba(51, 51, 51, 0.5);
     --quaternary: rgba(152, 196, 108, 0.5);
 
+    --orange: #f5a40e;
+    --orange-hover: #e67e00;
+    --green: #7fc53a;
+    --blue: #0066cc;
+    --blue-hover: #0052a3;
+    --red: #dc3545;
+    --gray: #666;
+    --light-gray: #999;
+    --border-color: #e0e0e0;
+    --bg-light: #f5f5f5;
+    --bg-expanded: #fafafa;
+    --star-color: #ffb90b;
+    --star-empty: #ddd;
+
     --header-height: 120px;
     --footer-height: 40px;
+}
 
-    --font-family-base: 'Gotham', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --font-weight-thin: 100;
-    --font-weight-xlight: 200;
-    --font-weight-light: 300;
-    --font-weight-regular: 400;
-    --font-weight-medium: 500;
-    --font-weight-bold: 700;
-    --font-weight-black: 900;
-    --font-weight-ultra: 950;
+* {
+    box-sizing: border-box;
 }
 
 html, body {
-    font-family: var(--font-family-base), sans-serif;
-    font-style: normal;
-    font-weight: var(--font-weight-regular);
-    padding-right: 0 !important;
+    font-family: 'Gotham', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
     height: 100vh;
 }
 
 .page {
-    min-height: calc(100vh - (calc(var(--header-height) + var(--footer-height))));
+    min-height: calc(100vh - (var(--header-height) + var(--footer-height)));
 }
 
 .d-row {
